enhance unit tests